# TechnoPark-DeepCee

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DayWeather.c  DayWeather.h  DynArray.c  DynArray.h  IS1  IS1.cbp  Makefile  README.md  appveyor.yml  cmake_install.cmake  linear.c  main.c  processes.c  stats.c  stats.h  tests.c  tests.cpp  threads.c
DynArray/: DynArray.c  GTestDynArray.cpp  TestDynArray.c
Testing/Temporary/: CTestCostData.txt
lib_subseq/DynArray/: DynArray.c  DynArray.h
lib_subseq/dyn_array/: dyn_array.c  dyn_array.h
lib_subseq/linear/: linear.c  linear.h
lib_subseq/processes/: processes.c  processes.h
lib_subseq/tests/: main_test.cpp
lib_subseq/tests/test_files/: medium.txt  small.txt
lib_subseq/threads/: threads.c  threads.h
linters/: run.sh
project/DynArray/: DynArray.c  DynArray.h  test_DynArray.cpp
project/linear/: linear.c  linear.h  test_linear.cpp
project/processes/: processes.c  processes.h  test_processes.cpp
project/threads/: test_threads.cpp  threads.c  threads.h
